--- a/maplewood-recycles/index.html
+++ b/maplewood-recycles/index.html
@@ -8,7 +8,7 @@
   <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  <title>NYC Var Compare</title>
+  <title>Maplewood Recycling</title>
 </head>
 
 <body>
